style: use getFirst and text blocks, targeting Java 21
Two review points from Vladimir, one of which needed the build target moved.

getFirst() over get(0): List.getFirst() arrived with SequencedCollection in
Java 21, so maven.compiler.release goes 17 -> 21. The brief asks for "Java 11+",
so 21 still satisfies it, but the trade is real and belongs in the README - a
reviewer now needs JDK 21, and the CI matrix drops to one version, so the build
no longer proves cross-version portability.

No escaped quotes left in any Java source. Where the quotes were decoration -
Allure step labels - they are single quotes now. Where they are part of the
value they became text blocks, because the API really does answer

    Cannot query field "nopeNotAField" on type "Character".

with double quotes: rewriting them as single quotes would have compiled and
then failed against a working service. Both assertions still pass, which is
what proves the expected text is right.

Verified: 27/27 green on release 21.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>